# zephyr

./: west.yml
arch/common/: gen_isr_tables.py
arch/riscv32/: Kconfig
boards/arm/frdm_kw41z/: Kconfig.board  frdm_kw41z.dts  frdm_kw41z_defconfig
boards/riscv32/rv32m1_vega/: Kconfig.defconfig  board.cmake  rv32m1_vega_ri5cy.dts  rv32m1_vega_ri5cy_defconfig  rv32m1_vega_zero_riscy.dts
boards/xtensa/intel_s1000_crb/: Kconfig.defconfig
cmake/compiler/: gcc.cmake
drivers/clock_control/: CMakeLists.txt  Kconfig  clock_control_rv32m1_pcc.c
drivers/entropy/: CMakeLists.txt  Kconfig  Kconfig.rv32m1_ri5cy  entropy_rv32m1_trng.c
drivers/flash/: CMakeLists.txt  Kconfig  soc_flash_mcux.c
drivers/gpio/: CMakeLists.txt  Kconfig  gpio_mcux.c
drivers/ieee802154/: ieee802154_fsci.c  ieee802154_fsci.h
drivers/interrupt_controller/: Kconfig  rv32m1_intmux.c
drivers/pinmux/: CMakeLists.txt  Kconfig
drivers/serial/: CMakeLists.txt  Kconfig  uart_rv32m1_lpuart.c
drivers/timer/: Kconfig  rv32m1_lptmr_timer.c
dts/arm/: hexiwear_k64.dts
dts/riscv32/: rv32m1_ri5cy.dtsi  rv32m1_zero_riscy.dtsi
ext/hal/nxp/: CMakeLists.txt
ext/lib/: CMakeLists.txt
ext/lib/ble/rv32m1/: CMakeLists.txt
modules/: Kconfig.nxp
subsys/bluetooth/: CMakeLists.txt
subsys/bluetooth/common/: Kconfig
subsys/bluetooth/controller/: CMakeLists.txt  Kconfig
subsys/bluetooth/controller/hci/kw41z/: Kconfig  hci_kw41z.c  nxp_framework.c  nxp_private.h
subsys/bluetooth/controller/hci/rv32m1/: Kconfig  hci_rv32m1.c  nxp_framework.c  nxp_private.h
subsys/bluetooth/host/: Kconfig
(+48 files in other folders)
